# ekg-x86

./: .gitignore  .hdoc.toml  CMakeLists.txt  README.md  ekg-ui-library.sublime-project  faq.txt
devlog/: commit.txt  todo.txt
include/ekg/: ekg.hpp
include/ekg/core/: context.hpp  memory.hpp  oldruntime.hpp  runtime.hpp  task.hpp  user_input_register.hpp
include/ekg/draw/: draw.hpp  font_renderer.hpp  shape.hpp  typography.hpp
include/ekg/gpu/: allocator.hpp  api.hpp  opengl_pipeline_template.hpp
include/ekg/io/: algorithm.hpp  design.hpp  gpu.hpp  input.hpp  log.hpp  memory.hpp  safety.hpp  task.hpp  text.hpp  typography.hpp
include/ekg/layout/: dimension.hpp  docknize.hpp  extentnize.hpp  scale.hpp
include/ekg/math/: floating_point.hpp  geometry.hpp
include/ekg/os/: ekg_glfw.hpp  ekg_opengl.hpp  ekg_sdl.hpp  ekg_vulkan.hpp  platform.hpp
include/ekg/service/: handler.hpp  input.hpp  theme.hpp
include/ekg/ui/: abstract.hpp  display.hpp  properties.hpp  stack.hpp  states.hpp
include/ekg/ui/abstract/: ui_abstract.hpp  ui_abstract_widget.hpp
include/ekg/ui/button/: button.hpp  button_widget.hpp
include/ekg/ui/checkbox/: checkbox.hpp
include/ekg/ui/combobox/: combobox.hpp
include/ekg/ui/frame/: frame.hpp  ui_frame.hpp
include/ekg/ui/label/: label.hpp
include/ekg/ui/listbox/: listbox.hpp  ui_listbox_widget.hpp
include/ekg/ui/menu/: menu.hpp
include/ekg/ui/popup/: popup.hpp
include/ekg/ui/scrollbar/: scrollbar.hpp
include/ekg/ui/slider/: slider.hpp
include/ekg/ui/textbox/: textbox.hpp
include/ekg/util/: geometry.hpp  image.hpp  io.hpp
src/: ekg.cpp
src/core/: context.cpp  oldruntime.cpp  runtime.cpp  task.cpp  user_input_register.cpp
src/draw/: draw.cpp  font_renderer.cpp  shape.cpp  typography.cpp
src/gpu/: allocator.cpp  opengl_pipeline_template.cpp
src/io/: algorithm.cpp  design.cpp  gpu.cpp  input.cpp  log.cpp  task.cpp  text.cpp  typography.cpp
src/layout/: dimension.cpp  docknize.cpp  extentnize.cpp  scale.cpp
src/math/: floating_point.hpp  geometry.cpp
src/os/: ekg_glfw.cpp  ekg_opengl.cpp  ekg_sdl.cpp  platform.cpp
src/service/: handler.cpp  input.cpp  theme.cpp
src/ui/: abstract.cpp
src/ui/abstract/: ui_abstract.cpp  ui_abstract_widget.cpp
src/ui/button/: ui_button.cpp  ui_button_widget.cpp
src/ui/checkbox/: ui_checkbox.cpp  ui_checkbox_widget.cpp
src/ui/frame/: ui_frame.cpp  ui_frame_widget.cpp
src/ui/label/: ui_label.cpp  ui_label_widget.cpp
src/ui/listbox/: ui_listbox.cpp  ui_listbox_widget.cpp
src/ui/popup/: ui_popup.cpp
src/ui/slider/: ui_slider.cpp  ui_slider_widget.cpp
src/ui/textbox/: ui_textbox.cpp  ui_textbox_widget.cpp
src/util/: geometry.cpp  image.cpp  io.cpp  text.cpp
test/: CMakeLists.txt
test/src/: ekg_gui_showcase_test.cpp
